--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 title: fMRI Domain Adaptation Guide
 author: Lauryn Burleigh
-logo: logo.png
+logo: #logo.png
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
