edit alpha, remove lambda fig

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 
 title: fMRI Domain Adaptation Guide
 author: Lauryn Burleigh
-logo: logo.png
+logo: logo.jpg
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
